[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["From dev to prod <contact@fromdevtoprod.me>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
